Add history prop to header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,7 @@
 header {
     align-items: center;
     background: #A8ACC7;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     height: 60px;
