--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -3,3 +3,11 @@
     flex-wrap: wrap;
     margin: 0 20px;
 }
+
+.no-results {
+    align-items: center;
+    display: flex;
+    font-size: 10vw;
+    justify-content: center;
+    height: 100vh;
+}
