--- a/src/containers/Detail/Detail.css
+++ b/src/containers/Detail/Detail.css
@@ -2,7 +2,21 @@
     padding: 10px;
 }
 
-.content {
+.detail .title {
+    font-size: 3.5rem;
+}
+
+.detail .author {
+    font-size: 1.2em;
+}
+
+.detail .content {
     line-height: 1.8em;
     padding: 20px;
+}
+
+.detail .tags {
+    display: flex;
+    justify-content: center;
+    margin: 40px 0;
 }
