--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,12 @@ a {
     display: flex;
     justify-content: flex-end;
     margin-right: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     position: fixed;
     right: 0;
+    z-index: 2;
+}
+
+.flex {
+    display: flex;
 }
