--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -2,7 +2,8 @@
     background: #FFF;
     border-radius: 3px;
     box-shadow: 0px 3px 0px 2px #eee;
-    display: block;
+    display: flex;
+    flex-direction: column;
     margin-bottom: 15px;
     margin-right: 15px;
     padding: 7px 12px;
